# src/modules/auth/dto/login.dto.ts
@@ -1,7 +1,7 @@
-import { SelectUser } from "@/db/drizzle/schema/user/schema";
+import { SelectUser } from '@/db/drizzle/schema/user/schema';
 
 export class LoginUserDto implements Partial<SelectUser> {
-    mail?: string;
-    phone?: string;
-    password!: string;
+  mail?: string;
+  phone?: string;
+  password!: string;
 }
